replace sort on redux

--- a/pizzeria/public/index.html
+++ b/pizzeria/public/index.html
@@ -29,7 +29,7 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable /services/storage/download/global/b1b29ffc-586d-49bb-bcde-3bdafa379e03JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
